--- a/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
+++ b/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
@@ -144,13 +144,15 @@
     };
 
 
-   
+
     private string GetChoiceClass(byte choice)
     {
         if(Corrected)
         {
-            if (choice == Question.Answer)
+            if (choice == Question.Answer && choice == SelectedChoice)
                 return "background : #66FF00; Color : white !important";
+            else if (choice == Question.Answer)
+                return "border: 4px solid #66FF00; Color : Black !important";
             else if (choice == SelectedChoice)
                 return "background : #FF3800 ; Color : white !important";
         }
