--- a/QuizApp/QuizApp.WASM/Pages/SubmissionResult.razor
+++ b/QuizApp/QuizApp.WASM/Pages/SubmissionResult.razor
@@ -3,7 +3,9 @@
 <div>
     @if (submission is not null)
     {
-        <div class="bg-info w-50 m-auto mt-3 text-white text-center fs-4 m-2 rounded">Your Score is @submission.Result / @submission.Choices.Count()</div>
+        <ScoreView result="@submission.Result"
+                    fullMark="@submission.Choices.Count()"/>
+        <div class="bg-info w-50 m-auto mt-3 m-2 rounded"></div>
         <ExamView Id="@examId"
                   submissionName="@submission.SubmissionPersonName"
                   Choices="@submission.Choices.ToArray()"
