Added Client Handler To Components

--- a/QuizApp/QuizApp.WASM/Pages/ExamView.razor
+++ b/QuizApp/QuizApp.WASM/Pages/ExamView.razor
@@ -1,49 +1,53 @@
 ﻿@page "/Exams/{Id}"
-@if (!string.IsNullOrEmpty(submission?.SubmissionPersonName))
-{
-    <div class=" data-latex exam-container d-flex flex-column justify-content-center align-items-center">
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        @if (Exam is not null)
-        {
-            <CascadingValue Value="submission">
-                <CascadingValue Value="Corrected">
-                    @{
-                        int i = 0;
-                        foreach (Question question in Exam.Questions)
-                        {
-                            i++;
-                            <!-- Add w-100 and text-center to the child container -->
+<HttpClientErrorHandler>
+    @if (!string.IsNullOrEmpty(submission?.SubmissionPersonName))
+    {
+        <div class=" data-latex exam-container d-flex flex-column justify-content-center align-items-center">
+            <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+            <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+            @if (Exam is not null)
+            {
+                <CascadingValue Value="submission">
+                    <CascadingValue Value="Corrected">
+                        @{
+                            int i = 0;
+                            foreach (Question question in Exam.Questions)
+                            {
+                                i++;
+                                <!-- Add w-100 and text-center to the child container -->
                                 <div class=" m-3 container">
                                     <QuestionView QuestionSelected="SelectChoices"
-                                                    SelectedChoice="@Choices[i-1]"
+                                                  SelectedChoice="@Choices[i-1]"
                                                   Question="question" QuestionNumber="i" />
                                 </div>
+                            }
                         }
-                    }
+                    </CascadingValue>
                 </CascadingValue>
-            </CascadingValue>
-        }
-        else
-        {
-            <MudProgressCircular Color
-            ="Color.Info"
-            Indeterminate="true"
-            Size="Size.Large"
-            Style="height:30vh;width:30vh;align-self:center;margin-top:15%"/>
-        }
+            }
+            else
+            {
+                <MudProgressCircular Color="Color.Info"
+                                     Indeterminate="true"
+                                     Size="Size.Large"
+                                     Style="height:30vh;width:30vh;align-self:center;margin-top:15%" />
+            }
 
-    <div>
-        <MudButton OnClick="SubmitExam">Correct Exam</MudButton>
-    </div>
-    @if(result is not null)
-        {
-            <div class="bg-info p-3 m-3 text-center">
-                Your result is @result
-            </div>
-        }
-    </div>
-}
+           @if(!Corrected)
+           {
+                <div>
+                    <MudButton OnClick="SubmitExam">Correct Exam</MudButton>
+                </div>
+           }
+            @if (result is not null)
+            {
+                <div class="bg-info p-3 m-3 text-center">
+                    Your result is @result
+                </div>
+            }
+        </div>
+    }
+</HttpClientErrorHandler>
 
 
 @code {
