--- a/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
+++ b/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
@@ -144,9 +144,9 @@
     {
         if(Corrected)
         {
-            if (choice == Question.Answer && choice == SelectedChoice)
+            if (choice == Question.QuestionAnswer && choice == SelectedChoice)
                 return "background : #66FF00; Color : white !important";
-            else if (choice == Question.Answer)
+            else if (choice == Question.QuestionAnswer)
                 return "border: 4px solid #66FF00; Color : Black !important";
             else if (choice == SelectedChoice)
                 return "background : #FF3800 ; Color : white !important";
