Added Edit View

--- a/QuizApp/QuizApp.WASM/Pages/HttpClientErrorHandler.razor
+++ b/QuizApp/QuizApp.WASM/Pages/HttpClientErrorHandler.razor
@@ -41,5 +41,13 @@
         StateHasChanged();
     }
 
+    protected void AddError(string errorMessage)
+    {
+        OnErrorsChanged(errorMessage);
+    }
+    protected void ClearErrors()
+    {
+        _errors = new();
+    }
 
 }
