--- a/QuizApp/QuizApp.WASM/_Imports.razor
+++ b/QuizApp/QuizApp.WASM/_Imports.razor
@@ -11,4 +11,5 @@
 @using QuizApp.BlazorWASM.Services
 @using QuizApp.Models
 @using MudBlazor
+@using Models;
 @using Microsoft.AspNetCore.WebUtilities
